# nonebot-plugin-fursuitpic

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_fursuitpic/: __init__.py  config.py  template.html
